--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: qs_navigation
 description: QS Navigation
-version: 0.0.1
-homepage: '???'
+version: 0.0.2
+homepage: 'https://github.com/artsiombarouski/qs_navigation.git'
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
